form/src/tests/derive/unimplemented_nested.stderr
error[E0277]: the trait bound `u32: form::Form` is not satisfied
  --> $DIR/unimplemented_nested.rs:24:1
   |
24 | #[form]
   | ^^^^^^^ the trait `form::Form` is not implemented for `u32`
   |
   = help: see issue #48214
